# ciboulette

./: .gitignore  .gitlab-ci.yml  CHANGELOG  Cargo.toml  README.md
benches/: main.rs  parse_body.rs  parse_query.rs  regex.rs
ciboulette_test_helper/: Cargo.toml
ciboulette_test_helper/src/: lib.rs
src/: bag.rs  config.rs  create_request.rs  delete_request.rs  errors.rs  errors_obj.rs  id.rs  inbound_request.rs  intention.rs  lib.rs  link.rs  macros.rs  member_name.rs  member_name_regex.rs  outbound_request.rs  read_request.rs  relationship.rs  request_selector.rs  resource_identifier.rs  resource_obj.rs  resource_obj_selector.rs  resource_schema.rs  resource_type.rs  response_status.rs  response_type.rs  serde_utils.rs  top_level.rs  update_request.rs
src/benches/: main.rs  parse_body.rs  regex.rs  utils.rs
src/body/: bag.rs  body_optional_data.rs  check.rs  create_request_body.rs  delete_request_body.rs  errors_obj.rs  link.rs  mod.rs  read_request_body.rs  relationship.rs  request_body.rs  request_body_data.rs  request_body_selector.rs  resource_identifier.rs  resource_obj.rs  resource_obj_selector.rs  resource_type.rs  resource_type_builder.rs  store.rs  top_level.rs  update_request_body.rs
src/body/tests/: bogus_deserialize.rs  check_linkage.rs  check_uniqueness.rs  key_clash.rs  mod.rs  normal_multi_docs.rs  normal_single_doc.rs  parsing_id.rs  request_data.rs  top_level_quick_checks.rs
src/error_request/: mod.rs
src/inbound_request/: create.rs  delete.rs  mod.rs  read.rs  request.rs  update.rs
src/outbound_request/: accumulator.rs  body.rs  element.rs  element_identifier.rs  elements.rs  mod.rs  request.rs  request_data_builder.rs  status.rs  type_.rs
src/outbound_request/tests/: build_failure.rs  delete_success.rs  insert_success.rs  mod.rs  select.rs  select_success.rs  update_success.rs
src/outbound_request/tests/snapshots/: ciboulette__outbound_request__tests__delete_success__simple_update.snap  ciboulette__outbound_request__tests__insert_success__simple_create.snap  ciboulette__outbound_request__tests__insert_success__simple_create_no_content.snap  ciboulette__outbound_request__tests__select__simple_read.snap  ciboulette__outbound_request__tests__select_success__simple_read_related.snap  ciboulette__outbound_request__tests__select_success__simple_read_relationships.snap  ciboulette__outbound_request__tests__select_success__with_include_nested.snap  ciboulette__outbound_request__tests__select_success__with_include_nested_self.snap  ciboulette__outbound_request__tests__select_success__with_include_related.snap.new  ciboulette__outbound_request__tests__select_success__with_include_single.snap  ciboulette__outbound_request__tests__select_success__with_include_single_empty.snap  ciboulette__outbound_request__tests__select_success__with_included.snap  ciboulette__outbound_request__tests__select_success__with_multi_included.snap  (+2 more)
src/path/: mod.rs  path_container.rs  path_type.rs
src/path/tests/: mod.rs  path_building.rs  path_parsing.rs
src/query/: fields.rs  mod.rs  parsing.rs  sorting.rs  sparse.rs  sparse_regex.rs  typed_param.rs  typed_param_regex.rs  visitor.rs
src/query/tests/: filter.rs  filter_simple.rs  include.rs  meta.rs  mod.rs  page.rs  sorting.rs  sparse.rs
src/requests/: create.rs  delete.rs  read.rs  request.rs  update.rs
src/response/: mod.rs
src/responses/: accumulator.rs  body.rs  element.rs  element_identifier.rs  mod.rs  request.rs  request_data_builder.rs  status.rs
src/responses/links/: create.rs  mod.rs  read.rs
src/responses/links/tests/: create.rs  delete.rs  (+5 more)
src/responses/tests/: build_failure.rs  delete_success.rs  insert_success.rs  mod.rs  select_success.rs  update_success.rs
src/selector/: benchmark.rs  deserializing.rs  error.rs  iter.rs  mod.rs
src/selector/tests/: deserializing.rs  iter.rs  mod.rs  utils.rs
src/store/: builder.rs  many_to_many.rs  mod.rs  one_to_many.rs  one_to_one.rs  relationships_options.rs  relationships_options_builder.rs  resource_type.rs  resource_type_builder.rs  resource_type_configuration.rs
src/store/tests/: many_to_many_rel.rs  many_to_one_rel.rs  mod.rs  one_to_many_rel.rs  one_to_one_rel.rs  pagination_settings.rs  types.rs
src/test_helper/: mod.rs
src/test_helper/benches/: mod.rs  parse_body.rs  parse_query.rs
src/tests/: create_requests.rs  delete_requests.rs  inbound_request.rs  mod.rs  parse_array_object.rs  parse_nested_object.rs  parse_simple.rs  read_requests.rs  update_requests.rs
src/tests/benches/: mod.rs  parse_body.rs  parse_query.rs
(+15 files in other folders)
