[package]
name = "ciboulette"
version = "0.1.0"
authors = ["Francis Le Roy <francis.leroy@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = [ "derive", "rc" ] }
serde_json = { version = "1", features = [ "raw_value" ] }
thiserror = "1"
getset = "0.1"
messy_json = { git = "https://gitlab.com/basiliq/messy_json.git"}
lazy_static = "1.4"
regex = "1.4"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-check", "run-cargo-fmt"]

[dev-dependencies]
criterion = { version = "0.3.4", features = [ "html_reports", "cargo_bench_support" ] }
serde_urlencoded = "0.7.0"
ciboulette_test_helper = { path = "ciboulette_test_helper" }

[[bench]]
name = "ciboulette_benches"
path = "benches/main.rs"
harness = false
