[package]
name = "ciboulette"
version = "0.1.0"
authors = ["Francis Le Roy <francis.leroy@protonmail.ch>"]
edition = "2018"
keywords = ["jsonapi", "json", "api"]
description = "Library to parse JSON:API requests and build responses"
repository = "https://gitlab.com/basiliq/ciboulette"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
sqlx_postgres = ["sqlx/postgres"]

[dependencies]
serde = { version = "1", features = [ "derive", "rc" ] }
serde_json = { version = "1", features = [ "raw_value" ] }
serde_urlencoded = "0.7.0"
thiserror = "1"
getset = "0.1"
messy_json = { version = "0.2", features = [ "uuid" ] }
lazy_static = "1.4"
petgraph = { version = "0.5.1", default-features = false }
url = "2.2.0"
itertools = "0.10.0"
uuid = { version = "0.8", features = [ "v4", "serde" ] }
sqlx = { optional = true, version = "0.5", default-features = false, features = [ "postgres", "uuid", "runtime-tokio-rustls"] }
arcstr = { version = "1.0.0", features = [ "std", "serde" ] }
indexmap = { version = "1.6", features = [ "serde" ] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-check", "run-cargo-fmt"]

[dev-dependencies]
insta = { version = "1.7", features = [ "redactions" ] }
criterion = { version = "0.3.4", features = [ "html_reports", "cargo_bench_support" ] }
ciboulette_test_helper = { path = "ciboulette_test_helper" }
doc-comment = "0.3.3"

[[bench]]
name = "ciboulette_benches"
path = "benches/main.rs"
harness = false

[profile.dev]
panic = "abort"
