[package]
name = "ciboulette_test_helper"
version = "0.1.0"
authors = ["Francis Le Roy <francis.leroy@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
messy_json = { version = "0.2", features = [ "uuid" ]}
ciboulette = { path = ".." }
arcstr = { version = "1.0.0", features = [ "std", "serde" ] }
